force-app/main/default/objects/SummaryReport__c/SummaryReport__c.object-meta.xml
<CustomObject>
    <label>日報</label>
    <nameField>
        <label>管理No</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>