force-app/main/default/objects/SummaryReport__c/fields/Approval__c.field-meta.xml
<CustomField>
    <fullName>Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>承認</label>
    <type>Checkbox</type>
</CustomField>