force-app/main/default/objects/SummaryReport__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>From</label>
    <type>Date</type>
</CustomField>