force-app/main/default/objects/SummaryReport__c/fields/ju_nippou_shinseibi__c.field-meta.xml
<CustomField>
    <fullName>ju_nippou_shinseibi__c</fullName>
    <label>申請日</label>
    <type>Date</type>
</CustomField>