force-app/main/default/objects/SummaryReport__c/fields/nippou_shinsei__c.field-meta.xml
<CustomField>
    <fullName>nippou_shinsei__c</fullName>
    <defaultValue>false</defaultValue>
    <label>申請</label>
    <type>Checkbox</type>
</CustomField>