force-app/main/default/objects/SummaryReport__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>To</label>
    <type>Date</type>
</CustomField>