force-app/main/default/objects/SummaryReport__c/recordTypes/Jukankyo.recordType-meta.xml
<RecordType>
    <fullName>Jukankyo</fullName>
    <active>true</active>
    <label>住環境</label>
</RecordType>