force-app/main/default/objects/SummaryReport__c/recordTypes/RecordType_mateco.recordType-meta.xml
<RecordType>
    <fullName>RecordType_mateco</fullName>
    <active>true</active>
    <label>マテコ</label>
</RecordType>