force-app/main/default/objects/SummaryReport__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>From__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Approval__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Department__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>