force-app/main/default/objects/SummaryReport__c/listViews/cw_custmersucces.listView-meta.xml
<ListView>
    <fullName>cw_custmersucces</fullName>
    <columns>NAME</columns>
    <columns>From__c</columns>
    <columns>To__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Approval__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Department__c</field>
        <operation>equals</operation>
        <value>カスタマーサクセス課</value>
    </filters>
    <label>03.カスタマーサクセス課</label>
    <sharedTo>
        <role>CSWEBCompany</role>
    </sharedTo>
</ListView>