force-app/main/default/objects/SummaryReport__c/listViews/CW_eigyoka1.listView-meta.xml
<ListView>
    <fullName>CW_eigyoka1</fullName>
    <columns>NAME</columns>
    <columns>From__c</columns>
    <columns>To__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Approval__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Department__c</field>
        <operation>equals</operation>
        <value>営業課</value>
    </filters>
    <label>02.営業課</label>
    <sharedTo>
        <role>CSWEBCompany</role>
    </sharedTo>
</ListView>