force-app/main/default/objects/SummaryReport__c/listViews/ddddd.listView-meta.xml
<ListView>
    <fullName>ddddd</fullName>
    <columns>NAME</columns>
    <columns>From__c</columns>
    <columns>To__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>nippou_shinsei__c</columns>
    <columns>Approval__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Department__c</field>
        <operation>equals</operation>
        <value>営業部,営業１課,営業２課</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>富岡,浅見,山道,菅沼,広瀬,真鍋,米田,早野,松田,吉田</value>
    </filters>
    <label>エンジニアリング_東京営業部</label>
    <sharedTo>
        <group>markeall</group>
        <roleAndSubordinatesInternal>en_nohara</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>