force-app/main/default/objects/SummaryReport__c/listViews/DL_past3days.listView-meta.xml
<ListView>
    <fullName>DL_past3days</fullName>
    <columns>NAME</columns>
    <columns>From__c</columns>
    <columns>To__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Approval__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>From__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:3</value>
    </filters>
    <label>過去3日間＿CS</label>
</ListView>