force-app/main/default/objects/SummaryReport__c/listViews/en_listview_tsuboi.listView-meta.xml
<ListView>
    <fullName>en_listview_tsuboi</fullName>
    <columns>NAME</columns>
    <columns>From__c</columns>
    <columns>To__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Approval__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>坪井</value>
    </filters>
    <label>野原エンジ_坪井</label>
    <sharedTo>
        <group>Group_nippou_osaka</group>
    </sharedTo>
</ListView>