force-app/main/default/objects/SummaryReport__c/listViews/en_nippou_listview.listView-meta.xml
<ListView>
    <fullName>en_nippou_listview</fullName>
    <columns>NAME</columns>
    <columns>From__c</columns>
    <columns>To__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Approval__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Department__c</field>
        <operation>equals</operation>
        <value>大阪営業部</value>
    </filters>
    <label>野原エンジニアリング_大阪営業部</label>
    <sharedTo>
        <roleAndSubordinatesInternal>en_nohara</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>