force-app/main/default/objects/SummaryReport__c/listViews/Ju_nippou9shu.listView-meta.xml
<ListView>
    <fullName>Ju_nippou9shu</fullName>
    <columns>NAME</columns>
    <columns>From__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Approval__c</columns>
    <columns>Department__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Department__c</field>
        <operation>contains</operation>
        <value>九州出張所,九州営業所</value>
    </filters>
    <label>07.九州営業所</label>
    <sharedTo>
        <role>JU_Sales1</role>
        <role>JU_Sales2</role>
        <role>JU_Sales3</role>
        <role>Kyusyu</role>
        <role>NakaNihon</role>
        <role>NishiNihonSales</role>
    </sharedTo>
</ListView>