force-app/main/default/objects/SummaryReport__c/listViews/Ju_nippouei1.listView-meta.xml
<ListView>
    <fullName>Ju_nippouei1</fullName>
    <columns>NAME</columns>
    <columns>From__c</columns>
    <columns>To__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>nippou_shinsei__c</columns>
    <columns>Approval__c</columns>
    <columns>Department__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Department__c</field>
        <operation>contains</operation>
        <value>営業一部</value>
    </filters>
    <label>02.営業一部</label>
    <sharedTo>
        <role>JU_Sales1</role>
        <role>JU_Sales2</role>
        <role>JU_Sales3</role>
        <role>Kyusyu</role>
        <role>NakaNihon</role>
        <role>NishiNihonSales</role>
    </sharedTo>
</ListView>